--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 400;
- src:  local('PT Sans'), local('PTSans-Regular'), url("../fonts/ptsans.woff2") format('woff2');
+ src:  local('PT Sans'),
+       local('PTSans-Regular'),
+       url("../fonts/ptsans.woff2") format('woff2'),
+       url("../fonts/ptsans.woff") format('woff');
  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
@@ -12,7 +15,10 @@
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 400;
- src: local('PT Sans'), local('PTSans-Regular'), url("../fonts/ptsans.woff2") format('woff2');
+ src: local('PT Sans'),
+      local('PTSans-Regular'),
+      url("../fonts/ptsans.woff2") format('woff2'),
+      url("../fonts/ptsans.woff") format('woff');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -21,7 +27,10 @@
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 700;
- src: local('PT Sans Bold'), local('PTSans-Bold'), url("../fonts/ptsansbold.woff2") format('woff2');
+ src: local('PT Sans Bold'),
+      local('PTSans-Bold'),
+      url("../fonts/ptsansbold.woff2") format('woff2'),
+      url("../fonts/ptsansbold.woff") format('woff');
  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
@@ -30,7 +39,10 @@
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 700;
- src: local('PT Sans Bold'), local('PTSans-Bold'), url("../fonts/ptsansbold.woff2") format('woff2');
+ src: local('PT Sans Bold'),
+      local('PTSans-Bold'),
+      url("../fonts/ptsansbold.woff2") format('woff2'),
+      url("../fonts/ptsansbold.woff") format('woff');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -826,6 +838,7 @@ cursor: pointer;
 
 .sort-direction-arrow {
   color: #cccccc;
+  text-decoration: none;
 }
 
 .sort-direction-arrow.active {
@@ -1031,6 +1044,7 @@ cursor: pointer;
   padding: 0;
   padding-top: 15px;
   font-size: 0;
+  text-decoration: none;
 }
 
 .social-btn:hover {
