После финальные коммиты

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ h2 {
   box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 
-.main_header {
+.main-header {
   position: relative;
 }
 
@@ -239,7 +239,12 @@ h2 {
   color: #000000;
 }
 
-.feature-text {
+.feature .feature-text {
+  margin: 0 47px;
+  line-height: 21px;
+}
+
+.features .feature-text {
   margin: 0 60px;
   line-height: 21px;
 }
@@ -249,7 +254,7 @@ h2 {
 }
 
 .feature-name {
-  margin: 55px 125px 20px 125px;
+  margin: 55px 123px 20px 125px;
 }
 
 .features .feature-name {
@@ -587,7 +592,7 @@ cursor: pointer;
   font-weight: bold;
 }
 
-.filters-checkbox-block > ul {
+/*.filters-checkbox-block > ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -596,27 +601,31 @@ cursor: pointer;
 
 .filters-checkbox-block li {
   margin-bottom: 25px;
-}
+}*/
+
+
 
 .filters-checkbox-block label {
+
   padding-left: 40px;
 }
 
-.filters-checkbox-block input[type="checkbox"] {
+.input-checkbox {
   display: none;
 }
 
-.filters-checkbox-block input[type="checkbox"] + label {
+.input-checkbox + label {
   display: block;
   position: relative;
   padding-left: 39px;
+  margin-bottom: 19px;
   cursor: pointer;
 }
 
-.filters-checkbox-block input[type="checkbox"] + label::before {
+.input-checkbox + label::before {
   position: absolute;
   content: "\2610";
-  top: 0;
+  top: 3px;
   left: 0;
   font-size: 26px;
   font-weight: normal;
@@ -625,11 +634,11 @@ cursor: pointer;
   color: #ffffff;
 }
 
-.filters-checkbox-block input[type="checkbox"]:checked + label::before {
+.input-checkbox:checked + label::before {
   content: "\2611";
 }
 
-.filters-checkbox-block input[type="checkbox"][disabled] + label::before {
+.input-checkbox[disabled] + label::before {
   color: #6a6a6a;
 }
 
